# nothing-less

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  data.csv  index.py  input.py  input_test.py  mise.toml  mkdocs.yml  nless.py  pyproject.toml
.github/workflows/: ci.yml  docs.yml  homebrew-update.yml  nless-shim-publish.yml  release.yml
docs/: configuration.md  getting-started.md  index.md  keybindings.md  tutorials.md
docs/assets/: demo-csv.tape  demo-deep-dive.tape  demo-json.tape  demo-pipe.tape  demo-regex.tape  demo.tape
docs/internals/: column-operations.md  copy-and-history.md  custom-rendering.md  delimiter-inference.md  index.md  log-format-detection.md  sessions.md  state-architecture.md  streaming-pipeline.md  threading.md  time-windows.md
docs/stylesheets/: extra.css
example_data/: api-response.json
nless/: app.py  app_columns.py  app_exmode.py  app_filters.py  app_groups.py  app_highlights.py  app_sessions.py  app_substitute.py  autocomplete.py  batch.py  buffer.py  buffer_actions.py  buffer_columns.py  buffer_delimiter.py  buffer_search.py  buffer_streaming.py  buffer_timewindow.py  buffergroup.py  caption.py  cli.py  config.py  contextmenu.py  dataprocessing.py  datatable.py  delimiter.py  gettingstarted.py  help.py  input.py  keymap.py  logformats.py  nless.tcss  nlessselect.py  nlesstable.py  operations.py  procutil.py  rawpager.py  regex_wizard.py  releasenotes.py  session.py  statusbar.py  (+5 more)
nless-shim/: README.md  pyproject.toml
scripts/: fake-json-api.sh  fake-k8s-events.py  fake-kubectl  fake-kubectl-pods-mixed.sh  fake-kubectl-pods.sh  fake-nless  fake-raw-logs.sh  fake-spring-logs.py  fake-timestamped-logs.sh  record-demos.sh  test-wayland-clipboard.py
tests/: bench_all.py  conftest.py  input_test.py  perf_history.json  perf_test.py  test_app_orchestration.py  test_batch.py  test_buffer.py  test_cli.py  test_clipboard.py  test_config.py  test_dataprocessing.py  test_delimiter.py  test_delimiter_helpers.py  test_exmode.py  test_input.py  test_keymap.py  test_logformats.py  test_operations.py  test_perf.py  test_session.py  test_statusbar.py  test_streaming.py  test_suggestions.py  test_theme.py  test_type_detection.py  test_types.py
