[project]
name = "nothing-less"
version = "0.1.0"
description = ""
authors = [
    {name = "Matt Pryor",email = "mapryor1991@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "colored (>=2.3.1,<3.0.0)",
    "textual (>=5.3.0,<6.0.0)",
    "textual-dev (>=1.7.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
