[project]
name = "nothing-less"
version = "1.10.0"
description = "A TUI paging application with enhanced support for tabular data and real-time streaming"
authors = [
    {name = "Matt Pryor",email = "mapryor1991@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "textual (>=8.0.2,<9.0.0)",
    "pyperclip (>=1.11.0,<2.0.0)",
    "packaging (>=26.0,<27.0)",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/mpryor/nothing-less"
Issues = "https://github.com/mpryor/nothing-less/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nless = "nless.cli:main"

[tool.poetry.group.dev.dependencies]
textual-dev = "^1.7.0"
pre-commit = "^4.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.25.0"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.6"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["perf: performance regression tests (may be slow)"]

[tool.poetry]
packages = [
    {include="nless"}
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.10.0"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
version_files = ["pyproject.toml:^version"]
